Phase-3-Workloads-Networking/06-network-policies/allow-backend-only.yaml
# Allow ONLY backend pods to reach database
# Frontend and everything else is still blocked
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-database
spec:
  podSelector:
    matchLabels:
      role: database            # applies to database pods
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: backend     # only pods with role=backend can connect
      ports:
        - protocol: TCP
          port: 80
